<resources>
    <string name="app_name">NeoSTORE</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgotpass">Forgot Password?</string>
    <string name="no_account">DONT HAVE AN ACCOUNT?</string>
    <string name="First_name">First Name</string>
    <string name="Last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone">Phone Number</string>
    <string name="Register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="Gender">Gender</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="i_agree">I agree the </string>
    <string name="terms_conditions">terms &amp; conditions</string>

    <string name="My_cart">My cart</string>
    <string name="Tables">Tables</string>
    <string name="Sofas">Sofas</string>
    <string name="Chairs">Chairs</string>
    <string name="Cupboards">Cupboards</string>
    <string name="My_account">My Account</string>
    <string name="store_locator">Store Locator</string>
    <string name="My_orders">My Orders</string>
    <string name="My_addess">My Address</string>
    <string name="Logout">Logout</string>

    <string name="Drawer_open">Drawer open</string>
    <string name="Drawer_closed">Drawer closed</string>

    <string name="Address">Address</string>
    <string name="Add_Address">Add Address</string>
    <string name="City">City</string>
    <string name="State">State</string>
    <string name="Zip_code">Zip Code</string>
    <string name="Country">Country</string>
    <string name="Save_address">Save Address</string>

    <string name="price">Rs. 27,390</string>

    <string name="Description">Description</string>

    <string name="buy_now">BUY NOW</string>
    <string name="Rate">RATE</string>

    <string name="shipping_address">Shipping Address</string>
    <string name="place_order">PLACE ORDER</string>
    <string name="Address_List">Address List</string>
    <string name="submitt">Submit</string>
    <string name="rate_now">Rate Now</string>
    <string name="order_id">ORDER ID:</string>
    <string name="order_date">Ordered Date:</string>
    <string name="total">Total</string>
    <string name="order_now">Order Now</string>
    <string name="current_pass">Current Password</string>
    <string name="new_pass">New Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="reset_pass">RESET PASSWORD</string>
    <string name="reset_password">Reset Password</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="dob">Date Of Birth</string>

    <string-array name="quantity">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="table">Category-Tables</string>
    <string name="chair">Category-Chairs</string>
    <string name="sofa">Category-Sofas</string>
    <string name="cupboard">Category-Cupboards</string>
    <string name="google_maps_key">AIzaSyDPyIbQJQxOvMzjN0qu2eLJ0sl8z-D3Dog</string>
    <string name="enter_qty">Enter Qty</string>

</resources>
