<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/redColor"
    tools:context="com.example.root.neostore.view.myProfile.EditProfileActivity">
    <include layout="@layout/toolbar"
        android:id="@+id/include"
       />
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="133dp"
        android:layout_height="133dp"
        android:id="@+id/profile_pic_id"
        android:layout_marginTop="@dimen/thirty"
        android:layout_below="@+id/include"
        android:src="@drawable/slider_img2"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/first_name"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        style="@style/Editetxt_style"
        android:layout_below="@+id/profile_pic_id"
        android:layout_alignStart="@+id/last_name" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/last_name"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        style="@style/Editetxt_style"
        android:layout_below="@+id/user_name"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/email_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:drawableLeft="@drawable/ic_email"
        style="@style/Editetxt_style"
        android:layout_below="@+id/last_name"
        android:layout_centerHorizontal="true" />
    <EditText
        android:id="@+id/phone_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="phone"
        android:maxLength="10"
        android:hint="@string/phone"
        android:drawableLeft="@drawable/ic_phone_android"
        style="@style/Editetxt_style"
        android:layout_below="@+id/email_id"
        android:layout_centerHorizontal="true" />
    <EditText
        android:id="@+id/dob_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/dob"
        android:drawableLeft="@drawable/ic_cake"
        style="@style/Editetxt_style"
        android:layout_below="@+id/phone_id"
        android:layout_centerHorizontal="true" />
    <Button
        android:id="@+id/submit_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dob_id"
        style="@style/login_button_style"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/submitt"
        />




</RelativeLayout>
