<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.root.neostore.view.login.LoginActivity"
    android:background="@color/redColor">

    <TextView
        android:id="@+id/Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/header_name"/>

    <EditText
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/username"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        style="@style/Editetxt_style"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:drawableLeft="@drawable/ic_lock"
        style="@style/Editetxt_style"
        />

    <Button
        android:id="@+id/login_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        style="@style/login_button_style"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:text="@string/login"
       />

    <TextView
        android:id="@+id/forgotpass_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/forgotpass"
       style="@style/forgot_pass"/>


    <TextView
        android:id="@+id/no_account_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/no_account"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="12dp"
        android:paddingBottom="10dp"
        style="@style/forgot_pass"/>

    <ImageView
        android:id="@+id/plus_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add"
        android:background="@drawable/add_account"
        android:layout_alignBottom="@+id/no_account_id"
        android:layout_alignEnd="@+id/login_id" />

</RelativeLayout>
