<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@color/redColor"
    tools:context="com.example.root.neostore.view.login.Activity.RegistrationActivity">

    <include layout="@layout/toolbar"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:id="@+id/Header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                style="@style/header_name"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <EditText
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/first_name"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                style="@style/Editetxt_style"
                android:layout_below="@+id/Header"
                android:layout_alignStart="@+id/last_name" />

            <EditText
                android:id="@+id/last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/last_name"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                style="@style/Editetxt_style"
                android:layout_below="@+id/user_name"
                android:layout_centerHorizontal="true" />

            <EditText
                android:id="@+id/email_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/email"
                android:drawableLeft="@drawable/ic_email"
                style="@style/Editetxt_style"
                android:layout_below="@+id/last_name"
                android:layout_centerHorizontal="true" />

            <EditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:drawableLeft="@drawable/ic_lock_open"
                style="@style/Editetxt_style"
                android:layout_below="@+id/email_id"
                android:layout_centerHorizontal="true" />
            <EditText
                android:id="@+id/confirm_pass_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/confirm_password"
                android:drawableLeft="@drawable/ic_lock"
                style="@style/Editetxt_style"
                android:layout_below="@+id/password"
                android:layout_centerHorizontal="true" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/confirm_pass_id"
                android:layout_marginTop="23dp"
                android:id="@+id/radiogroup"
                android:layout_alignStart="@+id/confirm_pass_id"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/gender"
                    android:text="@string/Gender"
                    style="@style/Radio_button_style"/>
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/rdgender"
                    android:layout_gravity="center"
                    android:weightSum="2"
                    android:layout_marginLeft="20dp">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/male"
                        android:checked="true"
                        android:text="@string/Male"
                        android:button="@drawable/radiobutton_status"
                        android:layout_weight="1"
                        android:paddingLeft="5dp"
                        style="@style/Radio_button_style"
                        android:drawablePadding="@dimen/drawable_padding"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/female"
                        android:text="@string/Female"
                        android:paddingLeft="5dp"
                        android:button="@drawable/radiobutton_status"
                        android:layout_weight="1"
                        style="@style/Radio_button_style"
                        android:drawablePadding="@dimen/drawable_padding"/>

                </RadioGroup>


            </LinearLayout>
            <EditText
                android:id="@+id/phone_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="number"
                android:maxLength="10"
                android:hint="@string/phone"
                android:drawableLeft="@drawable/ic_phone_android"
                style="@style/Editetxt_style"
                android:layout_below="@+id/radiogroup"
                android:layout_centerHorizontal="true" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/terms_id"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_marginTop="12dp"

                android:layout_below="@id/phone_id">

                <CheckBox
                    android:id="@+id/terms_conditions_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/i_agree"
                    android:button="@drawable/checkbox_status"
                    android:paddingLeft="10dp"
                    style="@style/forgot_pass"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/conditions_id"
                    android:layout_height="wrap_content"
                    android:text="@string/terms_conditions"
                    android:paddingLeft="5dp"
                    android:drawableBottom="@drawable/underline"
                    style="@style/forgot_pass"

                    />

            </LinearLayout>

            <Button
                android:id="@+id/register_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/terms_id"
                style="@style/login_button_style"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="13dp"
                android:text="@string/Register"
                />


        </RelativeLayout>

    </ScrollView>



</LinearLayout>
