<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/redColor"
    android:fitsSystemWindows="true"
    tools:context="com.example.root.neostore.view.myProfile.MyAccountActivity">
    <include layout="@layout/toolbar"
        android:id="@+id/include" />
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="133dp"
        android:layout_height="133dp"
        android:id="@+id/profile_pic_id"
        android:layout_marginTop="@dimen/thirty"
        android:src="@drawable/slider_img2"
        android:layout_below="@+id/include"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/name_text_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_pic_id"
        android:layout_marginEnd="14dp"
        android:layout_marginTop="30dp"
        style="@style/forgot_pass"
        android:layout_toStartOf="@+id/profile_pic_id"
        android:text="@string/first_name" />

    <TextView
        android:id="@+id/name_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:layout_alignBaseline="@+id/name_text_id"
        style="@style/forgot_pass"
        android:layout_alignBottom="@+id/name_text_id"
        android:layout_toEndOf="@+id/profile_pic_id" />

    <TextView
        android:id="@+id/last_name_text_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/forgot_pass"
        android:layout_alignStart="@+id/name_text_id"
        android:layout_below="@+id/name_text_id"
        android:layout_marginTop="20dp"
        android:text="@string/last_name" />

    <TextView
        android:id="@+id/last_name_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/forgot_pass"
        android:layout_alignBottom="@+id/last_name_text_id"
        android:layout_alignStart="@+id/name_id"
        android:text="@string/last_name" />

    <TextView
        android:id="@+id/email_text_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        style="@style/forgot_pass"
        android:layout_below="@+id/last_name_text_id"
        android:layout_marginTop="20dp"
        android:layout_alignStart="@+id/last_name_text_id" />

    <TextView
        android:id="@+id/email_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        style="@style/forgot_pass"
        android:layout_above="@+id/phone_text_id"
        android:layout_alignStart="@+id/last_name_id" />

    <TextView
        android:id="@+id/phone_text_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        style="@style/forgot_pass"
        android:text="@string/phone"
        android:layout_below="@+id/email_text_id"
        android:layout_alignStart="@+id/email_text_id" />

    <TextView
        android:id="@+id/phone_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        style="@style/forgot_pass"
        android:layout_above="@+id/dob_text_id"
        android:layout_alignStart="@+id/email_id" />

    <TextView
        android:id="@+id/dob_text_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/dob"
        style="@style/forgot_pass"
        android:layout_below="@+id/phone_text_id"
        android:layout_alignStart="@+id/phone_text_id" />

    <TextView
        android:id="@+id/dob_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/forgot_pass"
        android:layout_alignStart="@+id/phone_id"
        android:layout_alignTop="@+id/dob_text_id"
        android:text="@string/dob" />
    <Button
        android:id="@+id/edit_profile_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dob_id"
        style="@style/login_button_style"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:text="@string/edit_profile"
        />

    <Button
        android:id="@+id/reset_pass_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/reset_pass"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/reset_pass"
        />


</RelativeLayout>
