<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/redColor"
    tools:context="com.example.root.neostore.view.login.Activity.ResetPassword">
    <include layout="@layout/toolbar"/>

    <TextView
        android:id="@+id/Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/header_name"/>
    <EditText
        android:id="@+id/current_pass_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/current_pass"
        android:drawableLeft="@drawable/ic_lock"
        style="@style/Editetxt_style"
        />
    <EditText
        android:id="@+id/new_pass_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/current_pass_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/new_pass"
        android:drawableLeft="@drawable/ic_lock"
        style="@style/Editetxt_style"
        />
    <EditText
        android:id="@+id/confirm_pass_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_pass_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/confirm_pass"
        android:drawableLeft="@drawable/ic_lock"
        style="@style/Editetxt_style"
        />
    <Button
        android:id="@+id/reset_pass_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirm_pass_id"
        style="@style/login_button_style"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:text="@string/reset_pass"
        />
</RelativeLayout>
