<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/faintGray"
    android:fitsSystemWindows="true"
    tools:context="com.example.root.neostore.view.Address.AddAddressActivity">

    <include layout="@layout/toolbar"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/address_text_id"
        android:text="@string/Address"
        android:layout_marginLeft="@dimen/fifteen"
        android:layout_marginTop="@dimen/thirty"
        style="@style/Address"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/address_id"
        android:background="@drawable/address_field"
        android:layout_marginLeft="@dimen/fifteen"
        android:layout_marginRight="@dimen/fifteen"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:layout_marginTop="@dimen/seventeen"
        android:maxLines="5"
        style="@style/Address"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/city_text_id"
        android:layout_marginTop="@dimen/twenty_seven"
        android:text="@string/City"
        android:layout_marginLeft="@dimen/fifteen"
        style="@style/Address"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/landmark_id"
        android:maxLines="1"
        android:layout_marginTop="@dimen/seventeen"
        android:layout_marginRight="@dimen/fifteen"
        android:singleLine="true"
        android:layout_marginLeft="@dimen/fifteen"
        style="@style/edit_city"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/twenty_seven"
        android:weightSum="2">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/City"
                android:id="@+id/city_name_id"
                android:layout_marginLeft="@dimen/fifteen"
                android:layout_marginTop="@dimen/thirteen"
                style="@style/Address"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/city_id"
                android:layout_marginTop="@dimen/seventeen"
                android:layout_marginLeft="@dimen/fifteen"
                android:singleLine="true"
                android:layout_marginRight="@dimen/fifteen"
                style="@style/edit_city"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Zip_code"
                android:id="@+id/zip_code_text_id"

                android:layout_marginLeft="@dimen/fifteen"
                android:layout_marginTop="@dimen/thirteen"
                style="@style/Address"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/zip_code_id"
                android:inputType="number"
                android:maxLength="6"
                android:singleLine="true"
                android:layout_marginTop="@dimen/seventeen"
                android:layout_marginRight="@dimen/fifteen"
                android:layout_marginLeft="@dimen/fifteen"
                style="@style/edit_city"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/State"
                android:id="@+id/state_text_id"
                android:layout_marginLeft="@dimen/fifteen"
                android:layout_marginTop="@dimen/thirteen"
                style="@style/Address"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/state_id"
                android:layout_marginTop="@dimen/seventeen"
                android:singleLine="true"
                android:layout_marginRight="@dimen/fifteen"
                android:layout_marginLeft="@dimen/fifteen"
                style="@style/edit_city"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Country"
                android:id="@+id/country_text_id"
                android:layout_marginLeft="@dimen/fifteen"
                android:layout_marginTop="@dimen/thirteen"
                style="@style/Address"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/country_id"
                android:layout_marginTop="@dimen/seventeen"
                android:layout_marginLeft="@dimen/fifteen"
                android:layout_marginRight="@dimen/fifteen"
                android:singleLine="true"
                style="@style/edit_city"/>
        </LinearLayout>

    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Save_address"
        android:layout_marginTop="@dimen/twenty_seven"
        android:layout_marginLeft="@dimen/fifteen"
        android:layout_marginRight="@dimen/fifteen"
        style="@style/save_address"/>


</LinearLayout>
